--- a/web-main/css/style.css
+++ b/web-main/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -14,6 +15,7 @@ body {
 .hidden {
     display: none;
 }
+
 /* HEADER */
 header {
     padding: 15px 22px;
@@ -27,8 +29,20 @@ header {
 header h1 {
     position: absolute;
     top: 10px;
+}
+
+header h1 a {
+    text-decoration: none;
     color: #D1E2F0;
 }
+
+.shelf_header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 
 form {
     display: flex;
@@ -53,6 +67,7 @@ form .btn {
 .btn img {
     width: 40px;
 }
+
 /* SEARCH RESULT */
 
 section h2 {
@@ -85,4 +100,23 @@ section h2 {
 .section ul li a img {
     width: 130px;
     box-shadow: 0 5px 15px black;
+}
+
+select {
+    padding: 10px 15px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size: 1rem;
+    width: 200px;
+    background-color: #fff;
+    color: #555;
+    outline: none;
+    cursor: pointer;
+    transition: border-color 0.3s ease;
+}
+
+select:hover,
+select:focus {
+    border-color: #aaa;
+    /* Border color on hover/focus */
 }
