Ajusting padding and styling button

--- a/web-main/css/styledetails.css
+++ b/web-main/css/styledetails.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -51,4 +52,22 @@ main {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+button {
+    display: block;
+    margin: 20px auto;
+    background-color: #00b37d;
+    /* Blue color */
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #008a49;
+    /* Darker blue on hover */
 }
