Making review code and ajusting html

--- a/web-main/css/styledetails.css
+++ b/web-main/css/styledetails.css
@@ -54,6 +54,13 @@ main {
     gap: 10px;
 }
 
+/* REVIEW SECTION */
+
+.review {
+    display: flex;
+    flex-direction: column;
+}
+
 button {
     display: block;
     margin: 20px auto;
