--- a/web-main/css/styledetails.css
+++ b/web-main/css/styledetails.css
@@ -12,6 +12,11 @@ body {
     background-color: #D1E2F0;
 }
 
+.hidden {
+    display: none;
+}
+
+/* HEADER */
 header {
     padding: 15px 22px;
     display: flex;
@@ -57,9 +62,86 @@ main {
 /* REVIEW SECTION */
 
 .review {
+    margin: 20px 0;
     display: flex;
     flex-direction: column;
+    font-size: 1.25rem;
 }
+
+#review-list {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 20px 3%;
+}
+
+.review-detail {
+    width: 100%;
+    background-color: #4ea3ca;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 1px 10px #7e7e7e;
+    font-size: 1.125rem;
+}
+
+.review-detail p {
+    text-indent: 40px;
+    font-size: 1.1rem;
+}
+
+/* FORM */
+
+form {
+    padding-top: 10px;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+}
+
+.field {
+    margin: 10px 0;
+}
+
+label {
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="number"],
+textarea {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    box-sizing: border-box;
+}
+
+textarea {
+    resize: vertical;
+    min-height: 130px;
+    width: 600px;
+}
+
+form button {
+    background: #4ea3ca;
+    color: #fff;
+    padding: 8px 16px;
+    margin: 16px 0 50px 0;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #2f4ad0;
+}
+
+
+/* BUTTON */
 
 button {
     display: block;
