--- a/web-main/css/style.css
+++ b/web-main/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
+:root {
+    --bg-color: #D1E2F0;
+    --header-bg-color: #10567E;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,7 +14,7 @@
 
 body {
     height: 100vh;
-    background-color: #D1E2F0;
+    background-color: var(--bg-color);
 }
 
 .hidden {
@@ -22,7 +27,7 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #10567E;
+    background-color: var(--header-bg-color);
     max-height: 70px;
 }
 
@@ -33,7 +38,7 @@ header h1 {
 
 header h1 a {
     text-decoration: none;
-    color: #D1E2F0;
+    color: var(--bg-color);
 }
 
 .shelf_header {
@@ -59,7 +64,7 @@ form #name {
 }
 
 form .btn {
-    background-color: #10567E;
+    background-color: var(--header-bg-color);
     border: none;
     cursor: pointer;
 }
@@ -89,11 +94,20 @@ section h2 {
 }
 
 .section ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
     transition: transform 0.3s ease;
     transform-origin: center;
 }
 
-.section ul li:hover {
+.section ul li a {
+    transition: transform 0.3s ease;
+    transform-origin: center;
+}
+
+.section ul li a:hover {
     transform: scale(1.15);
 }
 
@@ -102,6 +116,19 @@ section h2 {
     box-shadow: 0 5px 15px black;
 }
 
+.section ul li button {
+    font-size: 20px;
+    border: none;
+    background-color: var(--bg-color);
+}
+
+.section ul li button:hover {
+    color: red;
+    cursor: pointer;
+}
+
+
+/* AUTHORS LIST */
 select {
     padding: 10px 15px;
     border: 1px solid #ccc;
